Add some गैंडा quotes

--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
 <li><p>सिलिन्डरको फेज समाप्त गर्दिन्छु, घर-घरमा चुला-चुलामा पाइप पुर्याइदिन्छु ।</p></li>
 <li><p>नेपाललाई स्थिरताको बाटोमा जान नदिन सबभन्दा लोभि पाठो खोजेर घाँस देखाउने काम भो। दाइने हातमा लिएको खुकुरी नदेख्ने देब्रे हातमा लिएको हरियो घाँस देख्ने, म्या म्या गरेर पछाडि लाग्ने ।</p></li>
 <li><p>हाजिरपुस्तिकामा हाजिर गर्ने, तनाखा लिने ठाउँबाट लिएर खल्तिमा हाल्ने अनी कुदेर सडकमा जाने। संबिधान बन्न हुन्न भन्ने फेरी कुदेर गएर हाजिर। हाजिर किन गर्ने भने तेस्को पनि भत्ता पाईन्छ ।</p></li>
+<li><p>के गर्ने गैंडा अमेरिकामा जन्मिदैन, युरोपमा जन्मिदैन, अस्ट्रेलियामा जन्मिदैन, यै (नेपाल) आउन पर्छ ।</p></li>
+<li><p>जिन्दगीमा एक पल्ट गैंडा हेरेन भने जुनसुकै विकसित देशको जोसुकै मान्छे होस्, जोसुकै धनि होस्, गैंडै देख्या छैन भने के देखोस | आधा जिन्दगी खेर गो |</p></li>
+<li><p>येत्रो सृष्टीको, सृष्टीको येत्रो, जैविक संसारमा येत्रो गैंडा जस्तो चिज देख्दै देख्या छैन भने पैसा कमाएर के गर्ने ?</p></li>
+<li><p>जसको पैसै नहुनु त एउटा कुरा, पैसा भएर पनि गैंडा नदेखीकन जान्छ जिन्दगी भने त बर्बाद भएन |</p></li>
+<li><p>कां छ राइनो? कल्ले भन्या? अंग्रेजीमा कां बाट आयो राइनो? जां हुदै हुदैन के को राइनो ? राइनो हुदैँ हुदैन त्या के को राइनो | गैंडा जसले देखेन, गैंडा भन्न नजानेर राइनो भन्छ - गैंडा भन्न नजानेको हो |</p></li>
 </ul>
 
 <h2>
